--- a/week-1.html
+++ b/week-1.html
@@ -16,27 +16,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="example.md"
+				<section data-markdown="./decks/week-1/example.md"
 				        data-separator="^\r?\n---\r?\n$"
 						data-separator-vertical="^\r?\n===\r?\n$"
 						data-separator-notes="^Note:"
 						data-charset="iso-8859-15">
-					
-				<!--
-					Note that Windows uses `\r\n` instead of `\n` as its linefeed character.
-					For a regex that supports all operating systems, use `\r?\n` instead of `\n`.
-				-->
-			</section>
-				<section>[Slide 1](./week-1.html)</section>
-				<section>Slide 2
-						<aside class="notes">
-						<p>Some notes</p>
-						</aside>
-						<p>Some slide text</p>
-						<aside class="notes">
-						<p>and some more notes</p>
-					</aside>
-				</section>
 			</div>
 		</div>
 
