--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="example.md"
+				<section data-markdown="index.md"
 				        data-separator="^\r?\n---\r?\n$"
 						data-separator-vertical="^\r?\n===\r?\n$"
 						data-separator-notes="^Note:"
@@ -26,16 +26,6 @@
 					Note that Windows uses `\r\n` instead of `\n` as its linefeed character.
 					For a regex that supports all operating systems, use `\r?\n` instead of `\n`.
 				-->
-			</section>
-				<section>[Slide 1](./week-1.html)</section>
-				<section>Slide 2
-						<aside class="notes">
-						<p>Some notes</p>
-						</aside>
-						<p>Some slide text</p>
-						<aside class="notes">
-						<p>and some more notes</p>
-					</aside>
 				</section>
 			</div>
 		</div>
