--- a/week-1.html
+++ b/week-1.html
@@ -21,6 +21,12 @@
 						data-separator-vertical="^\r?\n===\r?\n$"
 						data-separator-notes="^Note:"
 						data-charset="iso-8859-15">
+				
+				<!--
+					Note that Windows uses `\r\n` instead of `\n` as its linefeed character.
+					For a regex that supports all operating systems, use `\r?\n` instead of `\n`.
+				-->
+				</section>
 			</div>
 		</div>
 
