--- a/week-1.html
+++ b/week-1.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="./decks/week-1/example.md"
+				<section data-markdown="./decks/week-1/index.md"
 				        data-separator="^\r?\n---\r?\n$"
 						data-separator-vertical="^\r?\n===\r?\n$"
 						data-separator-notes="^Note:"
